# embedded-simple-ui

./: CONTRIBUTING.md  Cargo.toml  README.md
src/: led.rs  lib.rs  switch.rs
